test/compile-fail/identifier/use-as-path-segment-keyword/expected.txt
error: `r#self` cannot be a raw identifier
 --> top.rhdl:2:9
  |
2 | use a as r#self;
  |          ^^^^^^ 
